# proj_1/monolith/cmd/main.go
@@ -116,6 +116,9 @@ func main() {
 		v1.POST("/users/register", uHandler.Register)
 		v1.POST("/users/login", uHandler.Login)
 
+		v1.POST("/users/forgot-password", uHandler.ForgotPassword)
+		v1.POST("/users/verify-password-reset", uHandler.VerifyPasswordReset)
+
 		// Protected routes (requires valid JWT token)
 		protected := v1.Group("")
 		protected.Use(middleware.AuthMiddleware(rdb))
